@startuml

package Application {
    class ClientRequestHandler {
    }
}

package Business {
    class DailyMenuDAO {
    }
    class DailyMenuResponseManager {
    }
    class DailyRolloutManager {
    }
    class FoodFeedbackManager {
    }
    class FoodMenuManager {
    }
    class RolloutVotingManager {
    }
    class UsersManager {
    }
}

package DataAccess {
    class DatabaseManager {
    }
    package MySQL {
        class MySqlDBManager {
        }
    }
}

package Domain {
    package DataStructures {
        class DailyMenu {
        }
        class DailyMenuResponse {
        }
        class DailyRollout {
        }
        class FoodFeedback {
        }
        class FoodItem {
        }
        class RolloutVoting {
        }
        class Users {
        }
    }
    class webSocketRequest {
    }
}

package Presentation {
    class SocketServer {
    }
}

ClientRequestHandler --> DailyMenuDAO
ClientRequestHandler --> DailyMenuResponseManager
ClientRequestHandler --> DailyRolloutManager
ClientRequestHandler --> FoodFeedbackManager
ClientRequestHandler --> FoodMenuManager
ClientRequestHandler --> RolloutVotingManager
ClientRequestHandler --> UsersManager

DatabaseManager <|-- MySqlDBManager

DailyMenuDAO --> DailyMenu
DailyMenuResponseManager --> DailyMenuResponse
DailyRolloutManager --> DailyRollout
FoodFeedbackManager --> FoodFeedback
FoodMenuManager --> FoodItem
RolloutVotingManager --> RolloutVoting
UsersManager --> Users

SocketServer --> ClientRequestHandler

@enduml
